delete Procfile and runtime.txt, fix alignment problem

--- a/Code/static/css/weather.css
+++ b/Code/static/css/weather.css
@@ -15,7 +15,7 @@ body {
     width: 350px;
 }
 
-h2 {
+h1, h2 {
     text-decoration: underline;
     color: blue;
 }
@@ -28,10 +28,8 @@ h2 {
     color: rgb(77, 73, 73);
 }
 
-/* .daily-forecast {
-    padding-top: 30px;
+.daily-forecast {
+    margin-top: auto;
     height: 100%;
     text-align: center;
-    vertical-align: middle;
-    background-color: white;
-} */
+}
